packages/cashc/test/compiler/ParseError/incorrect_underscore_in_number_1.cash
contract Test() {
    function hello() {
        require(1000 == 1__000);
    }
}
